# DynamicKV

./: README.md
Backend/: .env  app.js  package-lock.json  package.json  server.js
Backend/config/: db.js
Backend/controllers/: Database.controller.js  User.controller.js
Backend/middlewares/: auth.middleware.js
Backend/models/: Collection.model.js  Database.model.js  Document.model.js  Product.js  User.js  User.model.js
Backend/routes/: Database.routes.js  User.routes.js  auth.js  products.js  users.js
Backend/routes/admin/: products.js  stats.js  users.js
Backend/services/: Database.service.js  User.service.js
DB/: test_db_timing  test_db_verify
DB/include/kv/: model.hpp
DB/include/kv/models/: product_model.hpp  user_model.hpp
DB/src/: CMakeLists.txt  config.cpp  db.cpp  http_server.cpp  main.cpp  mydb  q  segment_mgr.cpp  storage_engine.cpp  test.cpp
DB/test/: test_db.cpp  test_db_verify.cpp
Frontend/vite-project/: package-lock.json  package.json
Frontend/vite-project/src/: App.jsx  main.jsx
Frontend/vite-project/src/components/: DebugUserContext.jsx  ProtectedRoute.jsx
Frontend/vite-project/src/components/Admin/: AdminHeader.jsx  AdminLayout.jsx  Sidebar.jsx
Frontend/vite-project/src/context/: AdminContext.jsx  UserContext.jsx
Frontend/vite-project/src/pages/: Home.jsx  Start.jsx
Frontend/vite-project/src/pages/Admin/: DashBoard.jsx  Notifications.jsx  Orders.jsx  Products.jsx  Profile.jsx  Settings.jsx  Users.jsx
Frontend/vite-project/src/routes/: AdminRoute.jsx
Frontend/vite-project/src/utils/: api.js  authUtils.js
(+7 files in other folders)
